# duck-http

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
duck_http/: __init__.py  response.py  status.py
duckhttp/: __init__.py  examples.py  route.py
