[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "duck-http"
description = "duck-http is a high performance, barebones, made-from-scratch, zero-dependency HTTP framework for Python"
version = "0.0.1"
authors = [
    { name="linux-duccy" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/sqducc-projekts/duck-http"
